archfacts/src/components/Input/input.module.css
@font-face {
    font-family: 'poppins_medium';
    src: url('../../utils/fonts/Poppins-Medium.ttf');
  }

.tela{
    width: 100dvw;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
  }

.tela .content_area{
    display: flex;
    flex: 1;
    justify-content: center;
    width: 100%;
    align-items: center;
}

.tela .content_area .container_cadastro{
    border-radius: 1rem;
    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
    background-color: rgba(255, 255, 255, 0.8); 
    display: flex;
    flex-direction: row;
    width: 50%;
    align-items: center;
    height: 35rem;
}

.tela .content_area .container_cadastro .registro{
    font-family: 'poppins_medium';
    width: 50%;
    height: 100%;
    flex-direction: column;
    display: flex;
    justify-content: space-between;
}

.voltar_e_titulo{
  display: flex;
  flex-direction: column;
}

.voltar{
  cursor: pointer;
  color: white;
  background-color: #F95C00;
  width: 20%;
  border-radius: 0.5rem;
  border-bottom-left-radius: 0;
  text-align: center;
}

.h1_registro{
    font-size: 32px;
  }

.div_input{
flex-direction: column;
font-size: 16px;
align-items: center;
 display: flex;
 justify-content: center;

}

.div_input label{
    display: block; 
    width: 90%;
}

.div_input input{
  font-size: 16px;
    justify-content: center;
    display: flex;
    border: none;
    border-bottom: 1px solid #000;
    outline: none;
    width: 90%;
}

.div_input input:focus {
    border-bottom: 2px solid #05C7F2;
  }

